--- a/_src/_assets/styl/content-related.styl
+++ b/_src/_assets/styl/content-related.styl
@@ -40,6 +40,7 @@
 .related-photos
     @extend .divider-top
     margin-top: $line-height-computed
+    padding-top: $line-height-computed
 
     .photo-link
         display: block
