--- a/_src/_assets/styl/grid.styl
+++ b/_src/_assets/styl/grid.styl
@@ -106,7 +106,7 @@
 .grid--2of6,
 .grid--third
     > .grid__col
-        flex: 0 0 33%
+        flex: 0 0 33.3333%
 
 .grid--3of6,
 .grid--half
@@ -138,7 +138,7 @@
     .grid-small--2of6,
     .grid-small--third
         > .grid__col
-            flex: 0 0 33%
+            flex: 0 0 33.3333%
 
     .grid-small--3of6,
     .grid-small--half
@@ -170,7 +170,7 @@
     .grid-medium--2of6,
     .grid-medium--third
         > .grid__col
-            flex: 0 0 33%
+            flex: 0 0 33.3333%
 
     .grid-medium--3of6,
     .grid-medium--half
@@ -201,7 +201,7 @@
     .grid-large--2of6,
     .grid-large--third
         > .grid__col
-            flex: 0 0 33%
+            flex: 0 0 33.3333%
 
     .grid-large--3of6,
     .grid-large--half
